@@ -20,6 +20,7 @@ import swp391.fa25.swp391.entity.Account;
 import swp391.fa25.swp391.security.JwtTokenProvider;
 import swp391.fa25.swp391.security.PasswordEncoderConfig;
 import swp391.fa25.swp391.service.IService.IAccountService;
+import org.springframework.security.crypto.password.PasswordEncoder;
 
 import java.time.Instant;
 import java.time.LocalDate;
@@ -42,7 +43,9 @@ public class AccountController {
         List<Account> accounts = accountService.findByUsername(accountRequest.getUsername());
 
         if (isLoginSuccessful && !accounts.isEmpty()) {
-            Account account = accounts.getFirst();
+            Account account = accounts.get(0);
+            System.out.println("🔍 [LOGIN] Account found - ID: " + account.getId() + ", Username: " + account.getUsername());
+            
             String token = jwtTokenProvider.generateToken(account);
             AccountResponse accountResponse = new AccountResponse();
             accountResponse.setId(account.getId());
@@ -51,6 +54,7 @@ public class AccountController {
             accountResponse.setEmail(account.getEmail());
             accountResponse.setRole(account.getAccountRole());
 
+            System.out.println("🔍 [LOGIN] Response - ID: " + accountResponse.getId() + ", Username: " + accountResponse.getUsername());
             return ResponseEntity.ok(new LoginResponse(token, accountResponse));
         }
 
@@ -118,8 +122,14 @@ public class AccountController {
     @PutMapping("/{id}")
     public ResponseEntity<AccountResponse> updateAccount(@PathVariable Integer id, @RequestBody UpdateProfileRequest updateRequest) {
         try {
+            System.out.println("🔍 [UPDATE_PROFILE] Request received for ID: " + id);
+            System.out.println("🔍 [UPDATE_PROFILE] Update data: " + updateRequest);
+            
             Optional<Account> existingAccountOpt = accountService.findById(id);
+            System.out.println("🔍 [UPDATE_PROFILE] Account found: " + existingAccountOpt.isPresent());
+            
             if (existingAccountOpt.isEmpty()) {
+                System.out.println("❌ [UPDATE_PROFILE] Account not found for ID: " + id);
                 return ResponseEntity.notFound().build();
             }
 
